# dbversionchecker-cpp

./: CMakeLists.txt  Config.cmake.in  SQLServerChecker.cpp  SQLServerChecker.h  dbVersionChecker_test.cpp  readme.md
